# cs5339

./: .gitignore  Readme  boatClassification.py  clipper.py  cropImages.py  cropImages.sh  generateSubmissionForAllObjects.py  model.py  model2.py  original_model-128.py  original_model-64.py  original_model.py  svm.py  svm2.py  svmTest.py
dataSetGenerators/: cropImages.py  cropImages.sh  groundTruthDataSetGenerator.sh  groundTruthDataSetGenerators.py
edgebox/: .gitignore  CMakeLists.txt  README.md
edgebox/data/: config.txt
edgebox/matlab/: modelConvert.m  modelConvertDemo.m
edgebox/src/EdgeBox/: edgeBoxes.cpp  edgeBoxes.hpp  edgesDetect.cpp  edgesDetect.hpp  edgesNms.cpp  edgesNms.hpp  evaluation.cpp  evaluation.hpp  findEdges.cpp  findEdges.hpp  gradient.cpp  gradient.hpp  pugixml.cpp  pugixml.hpp  randomForest.hpp  sse.hpp  wrappers.cpp  wrappers.hpp
edgebox/src/sample/: checkRepFish.cpp  evaluate.cpp  fish.cpp  fishTest.cpp  isFish.cpp  jsoncpp.cpp  main.cpp
edgebox/src/tool/: convertToBinary.cpp
